plat-531 resolved spacing issue when no caption is used and changed default inline link styling

--- a/profiles/cr/themes/custom/campaign_base/sass/components/news-article/_news-article-teaser.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/components/news-article/_news-article-teaser.scss
@@ -14,6 +14,7 @@
 		}
 		h2 {
 			margin-top: calc(4 * #{gutter()});
+			font-family: $font-regular;
 			@include font-size($p-xlarge-font-size);
 			text-align: left;
 			a {
